
2013-10-25  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/function.c: fixed function_compare for NULL pointer function
	arguments
	* graprof/memory.c: storing caller addresses for failed_* structs
	* graprof/memprofile.c: tweaked printing procedures to properly
	accomodate where failed allocations come from

	* libgraprof/mallhooks.c: calling __libc* malloc family functions instead of
	pure {m,c,re}alloc, free - fixes problems where the active switch is
	set asynchronously. Additionally, the hooks now distinguish malloc and
	calloc, which is not visible in the resulting traces yet.

2913-10-19  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/bitmask.c: created and implemented simple bitmask
	functionality
	* graprof/bitmask.h: likewise

	* graprof/function.c: reimplemented function call tree time
	aggregation for increased performance

2013-09-23  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/memory.h: added function name to allocation notification
	structures
	* graprof/memory.c: implemented accessors
	* graprof/memprofile.c: implemented printing

	* graprof/addr.c: refactored for immense performance boost

	* graprof/libgraprof.c: reserverd section of the tracefile for md5
	hash of the binary, accessed via /proc/self/exe, added warning in case
	of unavailability
	* graprof/trace.c: added check against the passed binarys md5
	* graprof/graprof.c: passing binarys md5 to trace_read

2013-09-18  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/graprof.c: changed invokation style to allow one-line
	profiling

2013-09-15  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/graprof.c: tweaked top level workflow in main

2013-09-04  Andreas Grapentin  <andreas@grapentin.org>

	* graprof/callgraph.c: added value description to call graph

2013-09-03  Andreas Grapentin  <andreas@grapentin.org>

	* libgraprof/mallhooks.c: restored deprecated malloc_hook
	functionality, enabled/disabled by defining
	USE_DEPRECATED_MALLOC_HOOKS to 1 or 0
