@@ -25,6 +25,7 @@
 
 struct bitmask
 {
+  unsigned int width;
   unsigned int *fields;
   unsigned int nfields;
 };
